BAU: fix style issues (cont)
Changes:
* update pact tests to use defined metadata (to make it consistent with other tests)
* update PerformanceReportResource not to use '.build' in one of the param functions (not being used anyway)
* remove not used HalLinkBuilder class
* replace explicit type with <>
* remove unused import
* replace 'if .. else' with Objects.requireNonNullElse (TransactionSearchParams)
* remove unused variables
* replace return type to void where it hasn't been used